public class Main
{
    static Game game = new Game();

    public static void main(String[] args)
    {
        game.runGame();
    }
}
